# rag-agent-docs-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.aws.yml  docker-compose.yml  pyproject.toml
data/: checkpoints.sqlite-shm  checkpoints.sqlite-wal
data/eval/: agent_eval_dataset.jsonl  qa_dataset.jsonl
docs/: deployment_aws.md
docs/portfolio/: problem_solving.md
experiments/: README.md  agent_eval.json  agent_eval.md  chunking_samples.md  ragas_eval.json  ragas_eval.md  retrieval_eval.json  retrieval_eval.md  retrieval_optim.json  retrieval_optim.md
scripts/: render_mermaid.py
src/: config.py
src/agent/: cli.py
src/agent/evaluation/: run.py
src/agent/graph/: agent.py
src/agent/security/: __init__.py  input_guard.py  sanitize.py
src/agent/state/: state.py
src/agent/tools/: code_generate.py  docs_search.py  error_analyze.py  web_search.py
src/api/: deps.py  main.py  schemas.py
src/mcp_server/: server.py
src/rag/chunking/: base.py  run.py  strategies.py
src/rag/embedding/: embedder.py  run.py
src/rag/evaluation/: build_dataset.py  plot_ragas.py  ragas_eval.py  retrieval_eval.py  retrieval_optim.py
src/rag/generation/: chain.py  cli.py  llm.py  usage.py
src/rag/ingest/: crawl.py  load.py
src/rag/retrieval/: hybrid.py  rerank.py  retriever.py
src/ui/: app.py
tests/: test_sanitize.py  test_stream_events.py  test_thread_memory.py
