[project]
name = "llm-docs-assistant"
version = "0.1.0"
description = "RAG QA system + coding assistant agent for LLM framework docs (LangChain/LlamaIndex)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM / RAG
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.1.4",
    "langchain-text-splitters>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-tavily>=0.1.0",
    "langchain-aws>=1.0.0",
    "langgraph>=0.2.0",
    "pyyaml>=6.0",
    "openai>=1.40.0",
    "tiktoken>=0.7.0",
    # Vector DB
    "chromadb>=0.5.0",
    # Embeddings / retrieval
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    # Document loading
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
    "httpx>=0.27.0",
    "unstructured[md]>=0.15.0",
    # API / UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.38.0",
    # Config / utils
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "tqdm>=4.66.0",
    # Evaluation
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "matplotlib>=3.10.8",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
